==> haruishi43/vortex_core_qmk/qmk_pok3r/lib/chibios-contrib/os/hal/ports/HT32/LLD/hal_usb_lld.c <==
#include "hal.h"
#define roundup2(x, m) (((x) + (m) - 1) & ~((m) - 1))

void usb_lld_start(USBDriver *usbp){
    if (usbp->state == USB_STOP) {
        /* Enables the peripheral.*/
#if HT32_USB_USE_USB0 == TRUE
        if (&USBD1 == usbp) {
            // enable USB IRQ
            nvicEnableVector(USB_IRQn, HT32_USB_USB0_IRQ_PRIORITY);
            /* USBD_PowerUp */
            USB->CSR = USBCSR_DPWKEN | USBCSR_DPPUEN | USBCSR_LPMODE | USBCSR_PDWN;
            // enable usb interrupts
            USB->ISR = ~0U;
            USB->CSR &= ~USBCSR_DPWKEN;
            USB->IER = USBIER_UGIE | USBIER_SOFIE |
                USBIER_URSTIE | USBIER_RSMIE | USBIER_SUSPIE |
                USBIER_EP0IE;
        }
#endif // HT32_USB_USE_USB1
    }
    /* Configures the peripheral.*/
}

void usb_lld_stop(USBDriver *usbp) {

    if (usbp->state == USB_READY) {
        /* Resets the peripheral.*/

        /* Disables the peripheral.*/
#if HT32_USB_USE_USB0 == TRUE
        if (&USBD1 == usbp) {
            nvicDisableVector(USB_IRQn);
            /* Resets the peripheral.*/
            RSTCU->AHBPRSTR = RSTCU_AHBPRSTR_USBRST;
        }
#endif
    }
}

void usb_lld_reset(USBDriver *usbp) {
    // USB Reset
    // Clear CSR, except for DP pull up
    USB->CSR &= USBCSR_DPPUEN;

    /* Post reset initialization.*/
    usbp->epmem_next = 8;

    /* EP0 initialization.*/
    usbp->epc[0] = &ep0config;
    usb_lld_init_endpoint(usbp, 0);

    USB->IER = USBIER_UGIE | USBIER_SOFIE |
        USBIER_URSTIE | USBIER_RSMIE | USBIER_SUSPIE |
        USBIER_EP0IE;
}

void usb_lld_set_address(USBDriver *usbp) {
    USB->CSR |= USBCSR_ADRSET;
    USB->DEVAR = usbp->address & 0x7f;
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
    if(ep > USB_MAX_ENDPOINTS)
        return;

    const USBEndpointConfig *epcp = usbp->epc[ep];
    uint32_t cfgr = USBEPnCFGR_EPEN | ((uint32_t)ep<<24);
    size_t epmo;

    switch(epcp->ep_mode & USB_EP_MODE_TYPE){
        case USB_EP_MODE_TYPE_CTRL:
            break;
        case USB_EP_MODE_TYPE_ISOC:
            cfgr |= USBEPnCFGR_EPTYPE;
            break;
        case USB_EP_MODE_TYPE_BULK:
            break;
        case USB_EP_MODE_TYPE_INTR:
            break;
        default:
            return;
    }

    if (epcp->in_state != NULL) {
        epmo = usb_epmem_alloc(usbp, epcp->in_maxsize);
        cfgr |= epmo << 0;
        cfgr |= roundup2(epcp->in_maxsize, 4) << 10;
        cfgr |= USBEPnCFGR_EPDIR;
    }
    if (epcp->out_state != NULL) {
        epmo = usb_epmem_alloc(usbp, epcp->out_maxsize);
        if (ep > 0) {
            cfgr |= epmo << 0;
            cfgr |= roundup2(epcp->out_maxsize, 4) << 10;
        }
    }

    USB->EP[ep].CFGR = cfgr;
    USB->EP[ep].IER = (ep == 0) ?
      (USBEPnIER_SDRXIE|USBEPnIER_IDTXIE|USBEPnIER_ODRXIE) :
      (USBEPnIER_ODRXIE|USBEPnIER_IDTXIE);
    USB->IER |= (USBIER_EP0IE << ep);
}

void usb_lld_disable_endpoints(USBDriver *usbp) {
    for(int i = 1; i < USB_MAX_ENDPOINTS; ++i) {
        USB->EP[i].CFGR &= ~USBEPnCFGR_EPEN;
        USB->IER &= ~(USBIER_EP0IE << i);
    }

    const uint32_t cfgr = USB->EP[0].CFGR;
    usbp->epmem_next = (cfgr & 0x3ff) + ((cfgr >> 10) & 0x7f);
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep)
{
    (void)usbp;

    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((USB->EP[ep].CFGR & USBEPnCFGR_EPEN) == 0)
        return EP_STATUS_DISABLED;
    if ((USB->EP[ep].CSR & USBEPnCSR_STLRX) != 0)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  if (ep > USB_MAX_ENDPOINTS)
    return EP_STATUS_DISABLED;
  if ((USB->EP[ep].CFGR & USBEPnCFGR_EPEN) == 0)
    return EP_STATUS_DISABLED;
  if ((USB->EP[ep].CSR & USBEPnCSR_STLRX) != 0)
    return EP_STATUS_STALLED;
  return EP_STATUS_ACTIVE;
}

void usb_lld_read_setup(USBDriver *usbp, usbep_t ep, uint8_t *buf) {
    volatile uint32_t * const EPSRAM = (void *)(USB_SRAM_BASE + 0);
    for (size_t i = 0; i < 8; i += 4) {
        const uint32_t word = EPSRAM[i/4];
        buf[i + 0] = (word>>0);
        buf[i + 1] = (word>>8);
        buf[i + 2] = (word>>16);
        buf[i + 3] = (word>>24);
    }
    (void)usbp;
    (void)ep;
}

void usb_lld_start_out(USBDriver *usbp, usbep_t ep) {
    USBOutEndpointState * const osp = usbp->epc[ep]->out_state;

    if (osp->rxsize == 0)
        osp->rxpkts = 1;
    else
        osp->rxpkts = (osp->rxsize + usbp->epc[ep]->out_maxsize - 1) /
            usbp->epc[ep]->out_maxsize;
    USB->EP[ep].CSR &= USBEPnCSR_NAKRX;
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  USB->EP[ep].CSR = USBEPnCSR_STLRX;
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  USB->EP[ep].CSR = USBEPnCSR_STLTX;
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  USB->EP[ep].CSR &= USBEPnCSR_STLRX;
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  USB->EP[ep].CSR &= USBEPnCSR_STLTX;
}
